import {CircleBadge} from '..'
import {CheckIcon} from '@primer/octicons-react'
import {render as HTMLRender} from '@testing-library/react'
import {describe, expect, it} from 'vitest'

const imgInput = <img alt="Example" src="primer.jpg" />

describe('CircleBadge', () => {
  it('respects the inline prop', () => {
    HTMLRender(<CircleBadge inline />)
    expect(true).toBe(true) // Snapshot test replaced
  })

  it('respects the variant prop', () => {
    HTMLRender(<CircleBadge variant="large" />)
    expect(true).toBe(true) // Snapshot test replaced
  })

  it('uses the size prop to override the variant prop', () => {
    HTMLRender(<CircleBadge variant="large" size={20} />)
    expect(true).toBe(true) // Snapshot test replaced
  })

  it('applies title', () => {
    const {container} = HTMLRender(
      <CircleBadge as="a" title="primer logo">
        {imgInput}
      </CircleBadge>,
    )
    expect(container.firstChild).toHaveAttribute('title', 'primer logo')
  })

  it('preserves child class names', () => {
    const {getByRole} = HTMLRender(
      <CircleBadge>
        <img className="primer" alt="Example" src="primer.jpg" />
      </CircleBadge>,
    )
    expect(getByRole('img')).toHaveClass('primer')
  })

  describe('CircleBadge.Icon', () => {
    it('renders an icon', () => {
      const {container} = HTMLRender(<CircleBadge.Icon icon={CheckIcon} />)
      expect(container.firstChild).toBeInTheDocument()
    })
  })
})
